--- a/site/jsp.html
+++ b/site/jsp.html
@@ -6,7 +6,7 @@
 	<title>Hatim's</title>
 </head>
 <body>
-<h1>Just missing around</h1>
-<h1>Just missing around 2</h1>
+<h1>after that thing</h1>
+
 </body>
 </html>
