--- a/lists/lists.html
+++ b/lists/lists.html
@@ -10,15 +10,15 @@
   
     My typical dinner shopping list:  
     <ul>
-      <li>Milk</li>
-      <li>Donuts</li>
-      <li>Cookies
+      <li>item1</li>
+      <li>item2</li>
+      <li>item3</li>
       <ul>
-          <li>Chocolate</li>
-          <li>Sugar</li>
-          <li>Peanut Butter</li>
+          <li>item3/1</li>
+          <li>item3/2</li>
+          <li>item3/3</li>
       </ul>
-      <li>Pepto Bismol</li>
+      <li>item4</li>
     </ul>
       
   </div>
