--- a/sections-top/sections-top.html
+++ b/sections-top/sections-top.html
@@ -14,9 +14,11 @@
       <li><a href="#section3">#section3</a></li>
       <li><a href="#section4">#section4</a></li>
       <li><a href="#section5">#section5</a></li>
+      <li><a href="#bottom">#bottom</a></li>
     </ul>
 
   </section>
+
 
   <section id="section1">
     <h3>Section 1</h3>
@@ -44,5 +46,6 @@
       Back to top: <a href="#top">Back to Top</a>
     </p>
   </div>
+  <h3 id = "bottom">End of the page</h3>
 </body>
 </html>
