--- a/lists/entities.html
+++ b/lists/entities.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Don't be afraid to be &lt;then a 100% success &amp; &gt;more:</h1>
 <p>
+  <img src="https://th.bing.com/th/id/R.6bf0ec61fd6a49557b1fd4b3d2f6c681?rik=9aOaGpefN%2bJMBg&riu=http%3a%2f%2fupload.wikimedia.org%2fwikipedia%2fcommons%2f1%2f1c%2fPresident_Roosevelt_-_Pach_Bros.jpg&ehk=VmmDPFxtofMUQwkjSzPJZI%2bLGwKH%2f3jsDtQrGV8U7vg%3d&risl=&pid=ImgRaw&r=0" height="400" width="300" alt="an unknown man">
   &quot;It is not the critic who counts; not the man who points out how the strong man stumbles,
   or where the doer of deeds could have done them better. The credit belongs to the man who is actually 
   in the arena, whose face is marred by dust and sweat and blood; who strives valiantly; who errs, who 
